# maimory

./: maimory-01.txt  maimory-02.txt  maimory-03.txt  maimory-04.txt  maimory-05.txt  maimory-06.txt  maimory_04.ipynb  pyproject.toml
src/maimory/: __init__.py  __main__.py  tokens.py
